name: assert-explainer
cabal-version: >= 1.24
build-type: Simple
version: 1.0.0


library
  default-language: Haskell2010
  build-depends: base
               , ghc
               , syb
               , containers
               , template-haskell
  exposed-modules: AssertExplainer 
  other-modules: Constraint
  ghc-options: -Wall
